core: services: versionchooser: Allow updating bootstrap
