# core/services/versionchooser/main.py
@@ -57,6 +57,16 @@ async def get_available_versions(repository: str, image: str) -> Any:
     return await versionChooser.get_available_versions(f"{repository}/{image}")
 
 
+async def get_bootstrap_version() -> Any:
+    return await versionChooser.get_bootstrap_version()
+
+
+async def set_bootstrap_version(request: web.Request) -> Any:
+    data = await request.json()
+    tag = data["tag"]
+    return await versionChooser.set_bootstrap_version(tag)
+
+
 async def load(request: web.Request) -> Any:
     data = await request.read()
     return await versionChooser.load(data)
